--- a/index.html
+++ b/index.html
@@ -32,119 +32,151 @@
     <h2>Fonts</h2>
     <ul id="fonts">
       <li>
-        <div class="col1"><strong>Font: At Roca</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: <a href="https://arillatype.studio/font/at-roca">Font details</a></div>
+        <div class="col1"><strong>Font: At Textual</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2024<br>Link: <a href="https://arillatype.studio/font/at-textual">Font details</a></div>
+        <div class="col2"><a href="https://arillatype.studio/font/at-textual"><img src="assets/AtTextual.svg"></a></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: Maestro Pizza</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>With Muhammed Hadi<br>Link: *Soon*</div>
+        <div class="col2"><img src="assets/Maestro-Ar.svg"></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Kings & Queens League</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2024<br>Link: *Soon*</div>
+        <div class="col2"><img src="assets/Kings_Queens.svg"></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: Enterprise</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2023<br>Link: *Soon*</div>
+        <div class="col2"><img src="assets/EM_DISPLAY.svg"></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: Enterprise</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2023<br>Link: *Soon*</div>
+        <div class="col2"><img src="assets/EM_Text.svg"></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: the-cocktail</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2023<br>Link: *Soon*</div>
+        <div class="col2"><img src="assets/t-ck_sans.svg"></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Font: At Haüss Arabic</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>With Muhammed Hadi<br>Link: <a href="https://arillatype.studio/font/at-hauss-arabic">Font details</a></div>
+        <div class="col2"><a href="https://arillatype.studio/font/at-hauss-arabic"><img src="assets/AtHauss-Ar.svg"></a></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: Papaya</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2023<br>Link: *Soon*</div>
+        <div class="col2"><img src="assets/Papaya_Font.svg"></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Font: At Roca</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2023<br>Link: <a href="https://arillatype.studio/font/at-roca">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-roca"><img src="assets/AtRoca.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: UD Las Palmas</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: *Soon*</div>
+        <div class="col1"><strong>Client: UD Las Palmas</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2023<br>Link: *Soon*</div>
         <div class="col2"><img src="assets/UDLASPALMAS.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: Sports Emotion</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: *Soon*</div>
+        <div class="col1"><strong>Client: Sports Emotion</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2023<br>Link: *Soon*</div>
         <div class="col2"><img src="assets/Bethebest.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: At Queen</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: <a href="https://arillatype.studio/font/at-queen">Font details</a></div>
+        <div class="col1"><strong>Font: At Queen</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2023<br>Link: <a href="https://arillatype.studio/font/at-queen">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-queen"><img src="assets/AtQueen.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: At King</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: <a href="https://arillatype.studio/font/at-king">Font details</a></div>
+        <div class="col1"><strong>Font: At King</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2023<br>Link: <a href="https://arillatype.studio/font/at-king">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-king"><img src="assets/AtKing.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: LALIGA</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: *Soon*</div>
+        <div class="col1"><strong>Client: LALIGA</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2023<br>Link: *Soon*</div>
         <div class="col2"><img src="assets/LALIGAPLAYERS.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: LALIGA</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: *Soon*</div>
+        <div class="col1"><strong>Client: LALIGA</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2023<br>Link: *Soon*</div>
         <div class="col2"><img src="assets/LALIGAHeadline.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: LALIGA</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: *Soon*</div>
+        <div class="col1"><strong>Client: LALIGA</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2023<br>Link: *Soon*</div>
         <div class="col2"><img src="assets/LALIGAText.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: At Slam Cnd</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: <a href="https://arillatype.studio/font/at-slam-cnd">Font details</a></div>
+        <div class="col1"><strong>Font: At Slam Cnd</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2023<br>Link: <a href="https://arillatype.studio/font/at-slam-cnd">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-slam-cnd"><img src="assets/AtSlamCnd.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: Huelva City</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: *Soon*</div>
+        <div class="col1"><strong>Client: Huelva City</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2022<br>Link: *Soon*</div>
         <div class="col2"><img src="assets/Onuba.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: At Geodesic</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-geodesic">Font details</a></div>
+        <div class="col1"><strong>Font: At Geodesic</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-geodesic">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-geodesic"><img src="assets/AtGeodesic.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: LigaF</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: *Soon*</div>
+        <div class="col1"><strong>Client: LigaF</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2022<br>Link: *Soon*</div>
         <div class="col2"><img src="assets/LigaF.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: Larios</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/larios-custom-typeface">Case-study</a></div>
+        <div class="col1"><strong>Client: Larios</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2022<br>Link: <a href="https://arillatype.studio/larios-custom-typeface">Case-study</a></div>
         <div class="col2"><a href="https://arillatype.studio/larios-custom-typeface"><img src="assets/Larios.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: At Amiga</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-amiga">Font details</a></div>
+        <div class="col1"><strong>Font: At Amiga</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-amiga">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-amiga"><img src="assets/AtAmiga.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: Málaga City</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: *Soon*</div>
+        <div class="col1"><strong>Client: Málaga City</strong><br>Foundry: v<br>Date: 2022<br>Link: *Soon*</div>
         <div class="col2"><img src="assets/MalagaSans.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: RTL Group</strong><br>Arillatype + Atipo<br>Date: 2022<br>Link: <a href="https://arillatype.studio/rtl-group-font-expansion">Case-study</a></div>
+        <div class="col1"><strong>Client: RTL Group</strong><br><a href="https://arillatype.studio/">Arillatype</a> + <a href="https://atipo.es/">atipo</a><br>Date: 2022<br>Link: <a href="https://arillatype.studio/rtl-group-font-expansion">Case-study</a></div>
         <div class="col2"><a href="https://arillatype.studio/rtl-group-font-expansion"><img src="assets/RTLUnited.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: Gallina Blanca</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/gallina-blanca-custom-typeface">Case-study</a></div>
+        <div class="col1"><strong>Client: Gallina Blanca</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2022<br>Link: <a href="https://arillatype.studio/gallina-blanca-custom-typeface">Case-study</a></div>
         <div class="col2"><a href="https://arillatype.studio/gallina-blanca-custom-typeface"><img src="assets/GallinaBlanca.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: At Aero</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-aero">Font details</a></div>
+        <div class="col1"><strong>Font: At Aero</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-aero">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-aero"><img src="assets/AtAero.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: At Slam XCnd</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-slam-xcnd">Font details</a></div>
+        <div class="col1"><strong>Font: At Slam XCnd</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-slam-xcnd">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-slam-xcnd"><img src="assets/AtSlamXCnd.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: At Slam XXCnd</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-slam-xxcnd">Font details</a></div>
+        <div class="col1"><strong>Font: At Slam XXCnd</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-slam-xxcnd">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-slam-xxcnd"><img src="assets/AtSlamXXCnd.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: At Slam XXXCnd</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-slam-xxxcnd">Font details</a></div>
+        <div class="col1"><strong>Font: At Slam XXXCnd</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-slam-xxxcnd">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-slam-xxxcnd"><img src="assets/AtSlamXXXCnd.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: At Haüss</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-hauss">Font details</a></div>
+        <div class="col1"><strong>Font: At Haüss</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-hauss">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-hauss"><img src="assets/AtHauss.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: At Haüss Mono</strong><br>Foundry: Arillatype<br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-hauss-mono">Font details</a></div>
+        <div class="col1"><strong>Font: At Haüss Mono</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2022<br>Link: <a href="https://arillatype.studio/font/at-hauss-mono">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-hauss-mono"><img src="assets/AtHaussMono.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: Estudiantes</strong><br>Foundry: Arillatype<br>Date: 2021<br>Link: <a href="https://arillatype.studio/movistar-estudiantes-custom-typeface">Case-study</a></div>
+        <div class="col1"><strong>Client: Estudiantes</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2021<br>Link: <a href="https://arillatype.studio/movistar-estudiantes-custom-typeface">Case-study</a></div>
         <div class="col2"><a href="https://arillatype.studio/movistar-estudiantes-custom-typeface"><img src="assets/EstudiantesSlam.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: Busup</strong><br>Foundry: Arillatype<br>Date: 2021<br>Link: <a href="https://arillatype.studio/busup-custom-typeface">Case-study</a></div>
+        <div class="col1"><strong>Client: Busup</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2021<br>Link: <a href="https://arillatype.studio/busup-custom-typeface">Case-study</a></div>
         <div class="col2"><a href="https://arillatype.studio/busup-custom-typeface"><img src="assets/BusupSans.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: Twenix</strong><br>Foundry: Arillatype<br>Date: 2021<br>Link: <a href="https://arillatype.studio/twenix-custom-typeface">Case-study</a></div>
+        <div class="col1"><strong>Client: Twenix</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2021<br>Link: <a href="https://arillatype.studio/twenix-custom-typeface">Case-study</a></div>
         <div class="col2"><a href="https://arillatype.studio/twenix-custom-typeface"><img src="assets/TwenixSans.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: SM</strong><br>Foundry: Arillatype<br>Date: 2021<br>Link: *Soon*</div>
+        <div class="col1"><strong>Client: SM</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2021<br>Link: *Soon*</div>
         <div class="col2"><img src="assets/SMPrimaria.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: EASD València</strong><br>Foundry: Arillatype<br>Date: 2021<br>Link: <a href="https://arillatype.studio/easd-valencia-custom-typeface">Case-study</a></div>
+        <div class="col1"><strong>Client: EASD València</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2021<br>Link: <a href="https://arillatype.studio/easd-valencia-custom-typeface">Case-study</a></div>
         <div class="col2"><a href="https://arillatype.studio/easd-valencia-custom-typeface"><img src="assets/EscolaSans.svg"></a></div>
       </li>
       <li>
-        <div class="col1"><strong>Client: Forty Creek</strong><br>Foundry: Arillatype<br>Date: 2021<br>Link: <a href="https://arillatype.studio/forty-creek-custom-typeface">Case-study</a></div>
+        <div class="col1"><strong>Client: Forty Creek</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2021<br>Link: <a href="https://arillatype.studio/forty-creek-custom-typeface">Case-study</a></div>
         <div class="col2"><a href="https://arillatype.studio/forty-creek-custom-typeface"><img src="assets/Niagara.svg"></a></div>
       </li>
       <li>
@@ -551,8 +583,9 @@
       </ul>
       2024:
       <ul>
+        <li>♻️ <em><strong>Hades</em></strong> on Nintendo Switch, 10 hours</li>
         <li>🎮 <em><strong>Balatro</em></strong> on Nintendo Switch, 10 hours</li>
-        <li>🎮 <em><strong>Guardian Tales</em></strong> on iOS, 4 hours</li>
+        <li>⏹️ <em><strong>Guardian Tales</em></strong> on iOS, 6 hours</li>
         <li>❤️ <em><strong>Prince of Persia: The Lost Crown</em></strong> on Playstation 5, 34 hours</li>
         <li>⏹️ <em><strong>eFootball 2024</em></strong> on Playstation 5, 37 hours</li>
         <li>✅ <em><strong>Vampire Survivors</em></strong> on iOS, 13 hours</li>
