--- a/index.html
+++ b/index.html
@@ -192,12 +192,12 @@
         <div class="col2"><img src="assets/MacysSans.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: FS Rosa</strong><br>Foundry: Fontsmith<br>Date: 2020<br>Link: <a href="https://www.myfonts.com/collections/fs-rosa-font-monotype-imaging?rfsn=6624833.a9c515">Font details</a></div>
-        <div class="col2"><a href="https://www.myfonts.com/collections/fs-rosa-font-monotype-imaging?rfsn=6624833.a9c515"><img src="assets/FSRosa.svg"></a></div>
+        <div class="col1"><strong>Font: FS Rosa</strong><br>Foundry: Fontsmith<br>Date: 2020</div>
+        <div class="col2"><img src="assets/FSRosa.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: FS Renaissance</strong><br>Foundry: Fontsmith<br>Date: 2020<br>Link: <a href="https://www.myfonts.com/collections/fs-renaissance-font-monotype-imaging?rfsn=6624833.a9c515">Font details</a></div>
-        <div class="col2"><a href="https://www.myfonts.com/collections/fs-renaissance-font-monotype-imaging?rfsn=6624833.a9c515"><img src="assets/FSRenaissance.svg"></a></div>
+        <div class="col1"><strong>Font: FS Renaissance</strong><br>Foundry: Fontsmith<br>Date: 2020<br>With Craig Black</div>
+        <div class="col2"><img src="assets/FSRenaissance.svg"></div>
       </li>
       <li>
         <div class="col1"><strong>Client: Morillas</strong><br>Foundry: Fontsmith<br>Date: 2020</div>
@@ -208,8 +208,8 @@
         <div class="col2"><img src="assets/Virgin.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: SC Bunbury</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: <a href="https://www.myfonts.com/collections/bunbury-font-monotype-imaging?rfsn=6624833.a9c515">Font details</a></div>
-        <div class="col2"><a href="https://www.myfonts.com/collections/bunbury-font-monotype-imaging?rfsn=6624833.a9c515"><img src="assets/SCBunbury.svg"></a></div>
+        <div class="col1"><strong>Font: SC Bunbury</strong><br>Foundry: Fontsmith<br>Date: 2019</div>
+        <img src="assets/SCBunbury.svg"></div>
       </li>
       <li>
         <div class="col1"><strong>Font: SC Duncan</strong><br>Foundry: Fontsmith<br>Date: 2019</div>
@@ -224,16 +224,16 @@
         <div class="col2"><img src="assets/SCYorkton.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: FS Charity</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: <a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith?rfsn=6624833.a9c515">Font details</a></div>
-        <div class="col2"><a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith?rfsn=6624833.a9c515"><img src="assets/FSCharity.svg"></a></div>
+        <div class="col1"><strong>Font: FS Charity</strong><br>Foundry: Fontsmith<br>Date: 2019</div>
+        <div class="col2"><img src="assets/FSCharity.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: FS Berwick</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: <a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith?rfsn=6624833.a9c515">Font details</a></div>
-        <div class="col2"><a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith?rfsn=6624833.a9c515"><img src="assets/FSBerwick.svg"></a></div>
+        <div class="col1"><strong>Font: FS Berwick</strong><br>Foundry: Fontsmith<br>Date: 2019</div>
+        <div class="col2"><img src="assets/FSBerwick.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: FS Cattle</strong><br>Foundry: Fontsmith<br>Date: 2019<br>Link: <a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith?rfsn=6624833.a9c515">Font details</a></div>
-        <div class="col2"><a href="https://www.myfonts.com/collections/lost-foundry-font-fontsmith?rfsn=6624833.a9c515"><img src="assets/FSCattle.svg"></a></div>
+        <div class="col1"><strong>Font: FS Cattle</strong><br>Foundry: Fontsmith<br>Date: 2019</div>
+        <div class="col2"><img src="assets/FSCattle.svg"></div>
       </li>
       <li>
         <div class="col1"><strong>Client: WPP</strong><br>Foundry: Fontsmith<br>Date: 2019</div>
@@ -248,8 +248,8 @@
         <div class="col2"><img src="assets/MotoGP.svg"></div>
       </li>
       <li>
-        <div class="col1"><strong>Font: FS Neruda</strong><br>Foundry: Fontsmith<br>Date: 2018<br>Link: <a href="https://www.myfonts.com/collections/fs-neruda-font-fontsmith?rfsn=6624833.a9c515">Font details</a></div>
-        <div class="col2"><a href="https://www.myfonts.com/collections/fs-neruda-font-fontsmith?rfsn=6624833.a9c515"><img src="assets/FSNeruda.svg"></a></div>
+        <div class="col1"><strong>Font: FS Neruda</strong><br>Foundry: Fontsmith<br>Date: 2018</div>
+        <div class="col2"><img src="assets/FSNeruda.svg"></div>
       </li>
       <li>
         <div class="col1"><strong>Client: Zacapa</strong><br>Foundry: Fontsmith<br>Date: 2017</div>
