--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </li>
       <li>
         <div class="col1"><strong>Kings & Queens League</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2024<br>Link: *Soon*</div>
-        <div class="col2"><img src="assets/Kings_Queens.svg"></div>
+        <div class="col2"><img src="assets/KINGS_QUEENS.svg"></div>
       </li>
       <li>
         <div class="col1"><strong>Client: Enterprise</strong><br>Foundry: <a href="https://arillatype.studio/">Arillatype</a><br>Date: 2023<br>Link: *Soon*</div>
