--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       </li>
       <li>
         <div class="col1"><strong>Font: SC Bunbury</strong><br>Foundry: Fontsmith<br>Date: 2019</div>
-        <img src="assets/SCBunbury.svg"></div>
+        <div class="col2"><img src="assets/SCBunbury.svg"></div>
       </li>
       <li>
         <div class="col1"><strong>Font: SC Duncan</strong><br>Foundry: Fontsmith<br>Date: 2019</div>
