--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
       </p>
       2024:
       <ul>
-        <li>🥸 <em><strong>El Evangelio</em></strong> de Elisa Victoria</li>
+        <li>❤️ <em><strong>El Evangelio</em></strong> de Elisa Victoria</li>
         <li>🔥 <em><strong>Escribir es vivir</em></strong> de José Luis Sampedro</li>
         <li>✅ <em><strong>Blake y Mortimer: El secreto del Espadón #3</em></strong> de Edgard P. Jacobs</li>
         <li>✅ <em><strong>Blake y Mortimer: El secreto del Espadón #2</em></strong> de Edgard P. Jacobs</li>
@@ -585,7 +585,7 @@
       2024:
       <ul>
         <li>♻️ <em><strong>Hades</em></strong> on Nintendo Switch, 10 hours</li>
-        <li>🎮 <em><strong>Balatro</em></strong> on Nintendo Switch, 10 hours</li>
+        <li>🎮 <em><strong>Balatro</em></strong> on Nintendo Switch, 16 hours</li>
         <li>⏹️ <em><strong>Guardian Tales</em></strong> on iOS, 6 hours</li>
         <li>❤️ <em><strong>Prince of Persia: The Lost Crown</em></strong> on Playstation 5, 34 hours</li>
         <li>⏹️ <em><strong>eFootball 2024</em></strong> on Playstation 5, 37 hours</li>
