--- a/index.html
+++ b/index.html
@@ -307,6 +307,8 @@
       </p>
       2024:
       <ul>
+        <li>🥸 <em><strong>Blackwater I: La riada</em></strong> de Michael McDowell</li>
+        <li>✅ <em><strong>El hijo de Astérix</em></strong> de A. Uderzo</li>
         <li>❤️ <em><strong>El Evangelio</em></strong> de Elisa Victoria</li>
         <li>🔥 <em><strong>Escribir es vivir</em></strong> de José Luis Sampedro</li>
         <li>✅ <em><strong>Blake y Mortimer: El secreto del Espadón #3</em></strong> de Edgard P. Jacobs</li>
@@ -584,8 +586,9 @@
       </ul>
       2024:
       <ul>
+        <li>🎮 <em><strong>SteamWorld Dig</em></strong> on Nintendo Switch, 2 hours</li>
         <li>♻️ <em><strong>Hades</em></strong> on Nintendo Switch, 10 hours</li>
-        <li>🎮 <em><strong>Balatro</em></strong> on Nintendo Switch, 16 hours</li>
+        <li>✅ <em><strong>Balatro</em></strong> on Nintendo Switch, 15 hours</li>
         <li>⏹️ <em><strong>Guardian Tales</em></strong> on iOS, 6 hours</li>
         <li>❤️ <em><strong>Prince of Persia: The Lost Crown</em></strong> on Playstation 5, 34 hours</li>
         <li>⏹️ <em><strong>eFootball 2024</em></strong> on Playstation 5, 37 hours</li>
