--- a/index.html
+++ b/index.html
@@ -835,6 +835,7 @@
     <div class="col2c" id="awards">
       <p><strong>Awards</strong></p>
       <ul>
+        <li><strong>The One Show Pencil 2024</strong>, Broze for <em>Android Brand Refresh</em>.</li>
         <li><strong>Premio Gràffica 2023</strong>.</li>
         <li><strong>Red Dot Awards 2022</strong>, Best of the Best for <em>RTL United</em>.</li>
         <li><strong>iF Design Awards 2022</strong>, Winner for <em>RTL United</em>.</li>
