--- a/index.html
+++ b/index.html
@@ -307,7 +307,8 @@
       </p>
       2024:
       <ul>
-        <li>🥸 <em><strong>Blackwater I: La riada</em></strong> de Michael McDowell</li>
+        <li>🥸 <em><strong>Blackwater II: El dique</em></strong> de Michael McDowell</li>
+        <li>🔥 <em><strong>Blackwater I: La riada</em></strong> de Michael McDowell</li>
         <li>✅ <em><strong>El hijo de Astérix</em></strong> de A. Uderzo</li>
         <li>❤️ <em><strong>El Evangelio</em></strong> de Elisa Victoria</li>
         <li>🔥 <em><strong>Escribir es vivir</em></strong> de José Luis Sampedro</li>
