--- a/index.html
+++ b/index.html
@@ -307,7 +307,8 @@
       </p>
       2024:
       <ul>
-        <li>🥸 <em><strong>Blackwater II: El dique</em></strong> de Michael McDowell</li>
+        <li>🥸 <em><strong>Blackwater III: La casa</em></strong> de Michael McDowell</li>
+        <li>🔥 <em><strong>Blackwater II: El dique</em></strong> de Michael McDowell</li>
         <li>🔥 <em><strong>Blackwater I: La riada</em></strong> de Michael McDowell</li>
         <li>✅ <em><strong>El hijo de Astérix</em></strong> de A. Uderzo</li>
         <li>❤️ <em><strong>El Evangelio</em></strong> de Elisa Victoria</li>
@@ -836,7 +837,8 @@
     <div class="col2c" id="awards">
       <p><strong>Awards</strong></p>
       <ul>
-        <li><strong>The One Show Pencil 2024</strong>, Broze for <em>Android Brand Refresh</em>.</li>
+        <li><strong>D&AD 2024</strong>, Shortlisted for <em>Android Brand Refresh</em>.</li>
+        <li><strong>The One Show Pencil 2024</strong>, Bronze for <em>Android Brand Refresh</em>.</li>
         <li><strong>Premio Gràffica 2023</strong>.</li>
         <li><strong>Red Dot Awards 2022</strong>, Best of the Best for <em>RTL United</em>.</li>
         <li><strong>iF Design Awards 2022</strong>, Winner for <em>RTL United</em>.</li>
