--- a/index.html
+++ b/index.html
@@ -307,7 +307,8 @@
       </p>
       2024:
       <ul>
-        <li>🥸 <em><strong>Blackwater III: La casa</em></strong> de Michael McDowell</li>
+        <li>🥸 <em><strong>Blackwater IV: La guerra</em></strong> de Michael McDowell</li>
+        <li>🔥 <em><strong>Blackwater III: La casa</em></strong> de Michael McDowell</li>
         <li>🔥 <em><strong>Blackwater II: El dique</em></strong> de Michael McDowell</li>
         <li>🔥 <em><strong>Blackwater I: La riada</em></strong> de Michael McDowell</li>
         <li>✅ <em><strong>El hijo de Astérix</em></strong> de A. Uderzo</li>
@@ -588,7 +589,7 @@
       </ul>
       2024:
       <ul>
-        <li>🎮 <em><strong>SteamWorld Dig</em></strong> on Nintendo Switch, 2 hours</li>
+        <li>⏹️ <em><strong>SteamWorld Dig</em></strong> on Nintendo Switch, 2 hours</li>
         <li>♻️ <em><strong>Hades</em></strong> on Nintendo Switch, 10 hours</li>
         <li>✅ <em><strong>Balatro</em></strong> on Nintendo Switch, 15 hours</li>
         <li>⏹️ <em><strong>Guardian Tales</em></strong> on iOS, 6 hours</li>
