--- a/index.html
+++ b/index.html
@@ -307,7 +307,9 @@
       </p>
       2024:
       <ul>
-        <li>🥸 <em><strong>Blackwater IV: La guerra</em></strong> de Michael McDowell</li>
+        <li>🥸 <em><strong>Blackwater VI: La lluvia</em></strong> de Michael McDowell</li>
+        <li>🔥 <em><strong>Blackwater V: La fortuna</em></strong> de Michael McDowell</li>
+        <li>🔥 <em><strong>Blackwater IV: La guerra</em></strong> de Michael McDowell</li>
         <li>🔥 <em><strong>Blackwater III: La casa</em></strong> de Michael McDowell</li>
         <li>🔥 <em><strong>Blackwater II: El dique</em></strong> de Michael McDowell</li>
         <li>🔥 <em><strong>Blackwater I: La riada</em></strong> de Michael McDowell</li>
