--- a/index.html
+++ b/index.html
@@ -275,12 +275,12 @@
     <p>I’m Pedro Arilla (1984—), a designer with a passion for words, Co-Founder and Type Director of <a href="https://arillatype.studio">Arillatype.Studio®</a> where we help brands worldwide to encapsulate their voices typographically.</p>
     <p>I’ve led font projects for clients such as Google, Disney, Coca-Cola, LaLiga, Unilever, Paralympics and UEFA, and designed typefaces in Latin, Arabic, Cyrillic, Greek, Thai and Japanese scripts.</p>
     <p>I previously graduated with Distinction in the world’s top Typeface Design Masters at the University of Reading (UK), and worked as a Creative Director at the legendary foundries Fontsmith (UK) and Monotype (USA).</p>
-    <p>I’m publishing a book on type evaluation (Campgràfic, 2024). For over a decade, I ran one of the most important blogs and podcasts on typography in Spanish (Don Serifa).</p>
+    <p>I’ve published a book on type evaluation (<em><a href="https://www.campgrafic.com/?portfolio=501">¿Por qué es buena esta tipografía?</a></em>, Campgràfic, 2024). For over a decade, I ran one of the most important blogs and podcasts on typography in Spanish (Don Serifa).</p>
     <p><strong>[Español]</strong></p>
     <p>Soy Pedro Arilla (1984—), un diseñador apasionado por las palabras, cofundador y Director Tipográfico de <a href="https://arillatype.studio">Arillatype.Studio®</a> donde ayudamos a marcas de todo el mundo a encapsular sus voces tipográficamente.</p>
     <p>He liderado proyectos tipográficos para clientes como Google, Disney, Coca-Cola, LaLiga, Unilever, Juegos Paralímpicos y UEFA, y diseñado tipografías en los sistemas de escritura latino, árabe, cirílico, griego, tailandés y japonés.</p>
     <p>Anteriormente, me gradué con Distinción en el Máster en Diseño de Tipografía en la prestigiosa Universidad de Reading (Reino Unido), y trabajé como Director Creativo en las legendarias fundiciones Fontsmith (Reino Unido) y Monotype (Estados Unidos).</p>
-    <p>Próximamente voy a publicar un libro sobre evaluación tipográfica (Campgràfic, 2024). Durante más de una década publiqué uno de los blogs y podcasts más importantes sobre tipografía en español (Don Serifa).</p>
+    <p>Publiqué un libro sobre evaluación tipográfica (<em><a href="https://www.campgrafic.com/?portfolio=501">¿Por qué es buena esta tipografía?</a></em>, Campgràfic, 2024). Durante más de una década publiqué uno de los blogs y podcasts más importantes sobre tipografía en español (Don Serifa).</p>
   </section>
     <section class="content" id="contact">
     <h2>Contact</h2>
@@ -307,7 +307,8 @@
       </p>
       2024:
       <ul>
-        <li>🥸 <em><strong>Blackwater VI: La lluvia</em></strong> de Michael McDowell</li>
+        <li>🥸 <em><strong>Hombres buenos</em></strong> de Arturo Pérez Reverte</li>
+        <li>🔥 <em><strong>Blackwater VI: La lluvia</em></strong> de Michael McDowell</li>
         <li>🔥 <em><strong>Blackwater V: La fortuna</em></strong> de Michael McDowell</li>
         <li>🔥 <em><strong>Blackwater IV: La guerra</em></strong> de Michael McDowell</li>
         <li>🔥 <em><strong>Blackwater III: La casa</em></strong> de Michael McDowell</li>
