--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
       2024:
       <ul>
         <li>🥸 <em><strong>Hombres buenos</em></strong> de Arturo Pérez Reverte</li>
+        <li>♻️ <em><strong>Las aventuras del joven Indiana Jones: La maldición de la momia</em></strong> de M. Stine y H. W. Stine</li>
         <li>🔥 <em><strong>Blackwater VI: La lluvia</em></strong> de Michael McDowell</li>
         <li>🔥 <em><strong>Blackwater V: La fortuna</em></strong> de Michael McDowell</li>
         <li>🔥 <em><strong>Blackwater IV: La guerra</em></strong> de Michael McDowell</li>
@@ -592,7 +593,7 @@
       </ul>
       2024:
       <ul>
-        <li>🎮 <em><strong>Elden Ring: Shadow of the Erdtree</em></strong> on Playstation 5, 2 hours</li>
+        <li>🎮 <em><strong>Elden Ring: Shadow of the Erdtree</em></strong> on Playstation 5, 4 hours</li>
         <li>⏹️ <em><strong>SteamWorld Dig</em></strong> on Nintendo Switch, 2 hours</li>
         <li>♻️ <em><strong>Hades</em></strong> on Nintendo Switch, 10 hours</li>
         <li>✅ <em><strong>Balatro</em></strong> on Nintendo Switch, 15 hours</li>
