--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
       2024:
       <ul>
         <li>🥸 <em><strong>Hombres buenos</em></strong> de Arturo Pérez Reverte</li>
+        <li>✅ <em><strong>Zelda: La saga más innovadora</em></strong> de F. J. Brenlla Duarte</li>
         <li>♻️ <em><strong>Las aventuras del joven Indiana Jones: La maldición de la momia</em></strong> de M. Stine y H. W. Stine</li>
         <li>🔥 <em><strong>Blackwater VI: La lluvia</em></strong> de Michael McDowell</li>
         <li>🔥 <em><strong>Blackwater V: La fortuna</em></strong> de Michael McDowell</li>
