--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
       2024:
       <ul>
         <li>🥸 <em><strong>Hombres buenos</em></strong> de Arturo Pérez Reverte</li>
+        <li>✅ <em><strong>Zelda: El camino a BOTW y TOTK</em></strong> de F. J. Brenlla Duarte</li>
         <li>✅ <em><strong>Zelda: La saga más innovadora</em></strong> de F. J. Brenlla Duarte</li>
         <li>♻️ <em><strong>Las aventuras del joven Indiana Jones: La maldición de la momia</em></strong> de M. Stine y H. W. Stine</li>
         <li>🔥 <em><strong>Blackwater VI: La lluvia</em></strong> de Michael McDowell</li>
@@ -423,9 +424,9 @@
         <li>✅ <em><strong>Se tiene que morir mucha gente</em></strong> de Victoria Martín</li>
         <li>❤️ <em><strong>El gato que amaba los libros</em></strong> de Sōsuke Natsukawa</li>
         <li>✅ <em><strong>Guía NBA 2022-23 Gigantes</em></strong> de Andrés Monje</li>
-        <li>✅ <em><strong>El Pirata Garrapata</em></strong> de Juan Muñoz</li>
+        <li>♻️ <em><strong>El Pirata Garrapata</em></strong> de Juan Muñoz</li>
         <li>🔥 <em><strong>Contar es escuchar</em></strong> de Ursula K. Le Guin</li>
-        <li>✅ <em><strong>Fray Perico y su borrico</em></strong> de Juan Muñoz</li>
+        <li>♻️ <em><strong>Fray Perico y su borrico</em></strong> de Juan Muñoz</li>
         <li>✅ <em><strong>El juego del alma</em></strong> de Javier Castillo</li>
         <li>✅ <em><strong>La chica de nieve</em></strong> de Javier Castillo</li>
         <li>✅ <em><strong>El árabe del futuro: Vol. 5 (1992-1994)</em></strong> de Riad Sattouf</li>
